--- a/index.html
+++ b/index.html
@@ -149,42 +149,7 @@
 								</tr>	
 							</thead>
 							<tbody id="tableDanhSach">
-								<tr>
-									<td>1</td>
-									<td>Ngô Tấn Hưng</td>
-									<td>minhtung@gmail.com</td>
-									<td>01/01/2019</td>
-									<td>Sếp</td>
-									<td>10000000 VNĐ</td>
-									<td>Giỏi</td>
-								</tr>
-								<tr>
-									<td>2</td>
-									<td>Thái Thị Kim Hà</td>
-									<td>kimha@gmail.com</td>
-									<td>01/01/2020</td>
-									<td>Trường phòng</td>
-									<td>9000000 VNĐ</td>
-									<td>Khá</td>
-								</tr>
-								<tr>
-									<td>3</td>
-									<td>Lê Thái Gia Hân</td>
-									<td>giahan@gmail.com</td>
-									<td>01/01/2021</td>
-									<td>Nhân viên</td>
-									<td>8000000 VNĐ</td>
-									<td>Trung bình</td>
-								</tr>
-								<tr>
-									<td id="tk"></td>
-									<td id="ten"></td>
-									<td id="mail"></td>
-									<td id="ngayThangNam"></td>
-									<td id="viTri"></td>
-									<td id="mucLuong"></td>
-									<td id="loai"></td>
-								</tr>
+								
 							</tbody>
 						</table>
 						<button id="btnInDS" type="button" class="btn btn-success">In danh sách nhân viên</button>
@@ -315,8 +280,7 @@
 				<!-- Modal footer -->
 				<div class="modal-footer" id="modal-footer">
 					<button id="btnThemNV" type="button" class="btn btn-success">Thêm người dùng</button>
-					<button id="btnCapNhat" type="button" class="btn btn-success" onclick="return KiemTraHopLy()">Cập nhật</button>
-					<button type="button" class="btn btn-info" onclick="HienThiThongTin()">Hiển thị TT</button>
+					<button id="btnCapNhat" type="button" class="btn btn-success" onclick="return kiemTraHopLy()">Cập nhật</button>
 					<button id="btnDong" type="button" class="btn btn-danger" data-dismiss="modal">Đóng</button>
 				</div>
 
@@ -351,6 +315,9 @@
 			});
 		});
 	</script>
+	<script src="./js/validation.js"></script>
+	<script src="./js/NhanVien.js"></script>
+	<script src="./js/DSNV.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 
