--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@
 								
 							</tbody>
 						</table>
-						<button id="btnInDS" type="button" class="btn btn-success">In danh sách nhân viên</button>
 					</div>
 
 					<!-- Footer -->
@@ -280,7 +279,7 @@
 				<!-- Modal footer -->
 				<div class="modal-footer" id="modal-footer">
 					<button id="btnThemNV" type="button" class="btn btn-success">Thêm người dùng</button>
-					<button id="btnCapNhat" type="button" class="btn btn-success" onclick="return kiemTraHopLy()">Cập nhật</button>
+					<button id="btnCapNhat" type="button" class="btn btn-success" >Cập nhật</button>
 					<button id="btnDong" type="button" class="btn btn-danger" data-dismiss="modal">Đóng</button>
 				</div>
 
@@ -315,9 +314,10 @@
 			});
 		});
 	</script>
-	<script src="./js/validation.js"></script>
+	
 	<script src="./js/NhanVien.js"></script>
-	<script src="./js/DSNV.js"></script>
+	<script src="./js/dsnv.js"></script>
+	<script src="./js/validation.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 
